支持自定义样式

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,244 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.lwjfork.example.MainActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
-
-        <com.lwjfork.code.CodeEditText
-            android:id="@+id/et_test"
+        <Button
+            android:id="@+id/btn_simple"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
             android:layout_marginTop="20dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:inputType="number"
-            android:maxLength="6"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            app:blockErrorColor="@android:color/holo_red_light"
-            app:blockFocusColor="@android:color/holo_blue_bright"
-            app:blockLineWidth="1dp"
-            app:blockNormalColor="@android:color/black"
-            app:blockShape="underline"
-            app:blockSpace="15dp"
-            app:codeInputType="text"
-            app:codeTextColor="@android:color/black"
-            app:codeTextSize="30sp"
-            app:cursorWidth="4dp"
-            app:maxCodeLength="6"
-            app:showCursor="true"
-            tools:text="111" />
+            android:text="支持类型展示" />
 
-
-        <!--<com.lwjfork.code.CodeEditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:maxLength="6"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--app:blockErrorColor="@android:color/holo_red_light"-->
-        <!--app:blockFocusColor="@android:color/holo_blue_bright"-->
-        <!--app:blockLineWidth="1dp"-->
-        <!--app:blockNormalColor="@android:color/black"-->
-        <!--app:blockShape="underline"-->
-        <!--app:blockSpace="15dp"-->
-        <!--app:codeInputType="password"-->
-        <!--app:codeTextColor="@android:color/black"-->
-        <!--app:codeTextSize="30sp"-->
-        <!--app:cursorWidth="4dp"-->
-        <!--app:maxCodeLength="6"-->
-        <!--app:showCursor="true"-->
-        <!--tools:text="111" />-->
-
-        <!--<com.lwjfork.code.CodeEditText-->
-        <!--android:id="@+id/edit_pwd_stroke"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:maxLength="6"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--app:blockCorner="5dp"-->
-        <!--app:blockErrorColor="@android:color/holo_red_light"-->
-        <!--app:blockFocusColor="@android:color/holo_blue_bright"-->
-        <!--app:blockLineWidth="3dp"-->
-        <!--app:blockNormalColor="@android:color/black"-->
-        <!--app:blockShape="stroke"-->
-        <!--app:blockSpace="15dp"-->
-        <!--app:codeInputType="password"-->
-        <!--app:codeTextColor="@android:color/black"-->
-        <!--app:codeTextSize="30sp"-->
-        <!--app:cursorWidth="4dp"-->
-        <!--app:maxCodeLength="6"-->
-        <!--app:showCursor="true"-->
-        <!--tools:text="111" />-->
-
-        <!--<com.lwjfork.code.CodeEditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:maxLength="6"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--app:blockCorner="5dp"-->
-        <!--app:blockErrorColor="@android:color/holo_red_light"-->
-        <!--app:blockFocusColor="@android:color/holo_blue_bright"-->
-        <!--app:blockLineWidth="3dp"-->
-        <!--app:blockNormalColor="@android:color/black"-->
-        <!--app:blockShape="stroke"-->
-        <!--app:blockSpace="15dp"-->
-        <!--app:codeInputType="text"-->
-        <!--app:codeTextColor="@android:color/black"-->
-        <!--app:codeTextSize="30sp"-->
-        <!--app:cursorWidth="4dp"-->
-        <!--app:maxCodeLength="6"-->
-        <!--app:showCursor="true"-->
-        <!--tools:text="111" />-->
-
-
-        <!--<com.lwjfork.code.CodeEditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:maxLength="6"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--app:blockCorner="5dp"-->
-        <!--app:blockErrorColor="@android:color/holo_red_light"-->
-        <!--app:blockFocusColor="@android:color/holo_blue_bright"-->
-        <!--app:blockLineWidth="3dp"-->
-        <!--app:blockNormalColor="@android:color/black"-->
-        <!--app:blockShape="solid"-->
-        <!--app:blockSpace="15dp"-->
-        <!--app:codeInputType="password"-->
-        <!--app:codeTextColor="@android:color/white"-->
-        <!--app:codeTextSize="30sp"-->
-        <!--app:cursorWidth="4dp"-->
-        <!--app:dotRadius="8dp"-->
-        <!--app:maxCodeLength="6"-->
-        <!--app:showCursor="true"-->
-        <!--tools:text="111" />-->
-
-
-        <!--<com.lwjfork.code.CodeEditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:maxLength="6"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--app:blockCorner="5dp"-->
-        <!--app:blockErrorColor="@android:color/holo_red_light"-->
-        <!--app:blockFocusColor="@android:color/holo_blue_bright"-->
-        <!--app:blockLineWidth="3dp"-->
-        <!--app:blockNormalColor="@android:color/black"-->
-        <!--app:blockShape="solid"-->
-        <!--app:blockSpace="15dp"-->
-        <!--app:codeInputType="text"-->
-        <!--app:codeTextColor="@android:color/white"-->
-        <!--app:codeTextSize="30sp"-->
-        <!--app:cursorWidth="4dp"-->
-        <!--app:maxCodeLength="6"-->
-        <!--app:showCursor="true"-->
-        <!--tools:text="111" />-->
-
-        <!--<com.lwjfork.code.CodeEditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:maxLength="6"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--app:blockErrorColor="@android:color/holo_red_light"-->
-        <!--app:blockFocusColor="@android:color/holo_blue_bright"-->
-        <!--app:blockLineWidth="1dp"-->
-        <!--app:blockNormalColor="@android:color/black"-->
-        <!--app:blockShape="underline"-->
-        <!--app:blockSpace="15dp"-->
-        <!--app:codeInputType="text"-->
-        <!--app:codeTextColor="@android:color/black"-->
-        <!--app:codeTextSize="30sp"-->
-        <!--app:cursorWidth="4dp"-->
-        <!--app:maxCodeLength="6"-->
-        <!--app:showCursor="true"-->
-        <!--tools:text="111" />-->
-
-
-        <!--<com.lwjfork.code.CodeEditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:maxLength="6"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--app:blockErrorColor="@android:color/holo_red_light"-->
-        <!--app:blockFocusColor="@android:color/holo_blue_bright"-->
-        <!--app:blockLineWidth="1dp"-->
-        <!--app:blockNormalColor="@android:color/black"-->
-        <!--app:blockShape="underline"-->
-        <!--app:blockSpace="15dp"-->
-        <!--app:codeInputType="password"-->
-        <!--app:codeTextColor="@android:color/black"-->
-        <!--app:codeTextSize="30sp"-->
-        <!--app:cursorWidth="4dp"-->
-        <!--app:maxCodeLength="6"-->
-        <!--app:showCursor="true"-->
-        <!--tools:text="111" />-->
-
-
-        <LinearLayout
+        <Button
+            android:id="@+id/btn_custom_style"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btn_add"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:text="添加字符" />
-
-            <Button
-                android:id="@+id/btn_delete"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:text="删除字符" />
-        </LinearLayout>
-
+            android:text="自定义样式" />
     </LinearLayout>
 
 
