--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -34,6 +34,7 @@
             app:codeInputType="text"
             app:codeTextColor="@android:color/black"
             app:codeTextSize="30sp"
+            app:cursorHeight="30dp"
             app:cursorWidth="4dp"
             app:maxCodeLength="6"
             app:showCursor="true"
